#9 Updated NSAc* and fixed typo activites

--- a/docs/api-reference/CRMScript.NetServer.NSAccessGatewayInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAccessGatewayInfo.yml
@@ -3,59 +3,20 @@ items:
 - uid: CRMScript.NetServer.NSAccessGatewayInfo
   commentId: T:CRMScript.NetServer.NSAccessGatewayInfo
   id: NSAccessGatewayInfo
-  so.intellisense: Void.NSAccessGatewayInfo
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   - CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
   - CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
-  - CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   - CRMScript.NetServer.NSAccessGatewayInfo.SetClientId(String)
   - CRMScript.NetServer.NSAccessGatewayInfo.SetRedirectUri(String)
   name: NSAccessGatewayInfo
   nameWithType: NSAccessGatewayInfo
   fullName: CRMScript.NetServer.NSAccessGatewayInfo
   type: Class
-  summary: 
+  summary: "\nAccess gateway related data and operations.\n"
   example: 
-- uid: CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
-  commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
-  id: 'GetClientId()'
-  so.intellisense: NSAccessGatewayInfo.GetClientId
-  langs:
-  - crmscript
-  name: 'GetClientId()'
-  nameWithType: NSAccessGatewayInfo.GetClientId()
-  fullName: CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
-  type: Method
-  summary: "\nThis is the registered client_id for AccessGateway OIDC<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAccessGatewayInfo thing;\nString clientId  = thing.GetClientId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetClientId()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSAccessGatewayInfo thing;\nString clientId  = thing.GetClientId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
-  commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
-  id: 'GetRedirectUri()'
-  so.intellisense: NSAccessGatewayInfo.GetRedirectUri
-  langs:
-  - crmscript
-  name: 'GetRedirectUri()'
-  nameWithType: NSAccessGatewayInfo.GetRedirectUri()
-  fullName: CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
-  type: Method
-  summary: "\nThis is the registered redirect_uri for AccessGateway OIDC.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSAccessGatewayInfo thing;\nString redirectUri  = thing.GetRedirectUri();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetRedirectUri()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSAccessGatewayInfo thing;\nString redirectUri  = thing.GetRedirectUri();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   id: '#ctor'
@@ -71,6 +32,44 @@ items:
   syntax: 
     content: NSAccessGatewayInfo
   example: 
+- uid: CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
+  commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
+  id: 'GetClientId()'
+  so.intellisense: NSAccessGatewayInfo.GetClientId
+  langs:
+  - crmscript
+  name: 'GetClientId()'
+  nameWithType: NSAccessGatewayInfo.GetClientId()
+  fullName: CRMScript.NetServer.NSAccessGatewayInfo.GetClientId()
+  type: Method
+  summary: "\nReturns the registered client_id for AccessGateway OIDC.\n"
+  remarks: 
+  syntax: 
+    content: String GetClientId()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSAccessGatewayInfo thing;\nString clientId  = thing.GetClientId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
+  commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
+  id: 'GetRedirectUri()'
+  so.intellisense: NSAccessGatewayInfo.GetRedirectUri
+  langs:
+  - crmscript
+  name: 'GetRedirectUri()'
+  nameWithType: NSAccessGatewayInfo.GetRedirectUri()
+  fullName: CRMScript.NetServer.NSAccessGatewayInfo.GetRedirectUri()
+  type: Method
+  summary: "\nReturns the registered redirect_uri for AccessGateway OIDC.\n"
+  remarks: 
+  syntax: 
+    content: String GetRedirectUri()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSAccessGatewayInfo thing;\nString redirectUri  = thing.GetRedirectUri();</code></pre>\n"
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.SetClientId(String)
   commentId: M:CRMScript.NetServer.NSAccessGatewayInfo.SetClientId(String)
   id: 'SetClientId(String)'
@@ -81,14 +80,16 @@ items:
   nameWithType: NSAccessGatewayInfo.SetClientId(String)
   fullName: CRMScript.NetServer.NSAccessGatewayInfo.SetClientId(String)
   type: Method
-  summary: "\nThis is the registered client_id for AccessGateway OIDC\n"
+  summary: "\nSets the client_id for AccessGateway OIDC.\n"
   remarks: 
   syntax: 
-    content: SetClientId(String clientId)
+    content: Void SetClientId(String clientId)
     parameters:
     - id: clientId
       type: CRMScript.Global.String
-      description: 
+      description:
+    return:
+      type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSAccessGatewayInfo thing;\nString clientId;\nthing.SetClientId(clientId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSAccessGatewayInfo.SetRedirectUri(String)
@@ -101,14 +102,16 @@ items:
   nameWithType: NSAccessGatewayInfo.SetRedirectUri(String)
   fullName: CRMScript.NetServer.NSAccessGatewayInfo.SetRedirectUri(String)
   type: Method
-  summary: "\nThis is the registered redirect_uri for AccessGateway OIDC.\n"
+  summary: "\nSets the redirect_uri for AccessGateway OIDC.\n"
   remarks: 
   syntax: 
-    content: SetRedirectUri(String redirectUri)
+    content: Void SetRedirectUri(String redirectUri)
     parameters:
     - id: redirectUri
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSAccessGatewayInfo thing;\nString redirectUri;\nthing.SetRedirectUri(redirectUri);</code></pre>\n"
 references:
@@ -124,3 +127,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
