--- a/docs/api-reference/CRMScript.NetServer.NSActivityFilter.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityFilter.yml
@@ -3,16 +3,15 @@ items:
 - uid: CRMScript.NetServer.NSActivityFilter
   commentId: T:CRMScript.NetServer.NSActivityFilter
   id: NSActivityFilter
-  so.intellisense: Void.NSActivityFilter
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSActivityFilter.#ctor
   - CRMScript.NetServer.NSActivityFilter.GetAssociateList()
   - CRMScript.NetServer.NSActivityFilter.GetFromDate()
   - CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
   - CRMScript.NetServer.NSActivityFilter.GetGroupList()
   - CRMScript.NetServer.NSActivityFilter.GetToDate()
-  - CRMScript.NetServer.NSActivityFilter.#ctor
   - CRMScript.NetServer.NSActivityFilter.SetAssociateList()
   - CRMScript.NetServer.NSActivityFilter.SetFromDate()
   - CRMScript.NetServer.NSActivityFilter.SetFutureDateList(NSMDOListItem[])
@@ -22,103 +21,8 @@ items:
   nameWithType: NSActivityFilter
   fullName: CRMScript.NetServer.NSActivityFilter
   type: Class
-  summary: 
+  summary: "\nActivity list filter information.\n"
   example: 
-- uid: CRMScript.NetServer.NSActivityFilter.GetAssociateList()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.GetAssociateList()
-  id: 'GetAssociateList()'
-  so.intellisense: NSActivityFilter.GetAssociateList
-  langs:
-  - crmscript
-  name: 'GetAssociateList()'
-  nameWithType: NSActivityFilter.GetAssociateList()
-  fullName: CRMScript.NetServer.NSActivityFilter.GetAssociateList()
-  type: Method
-  summary: "\nThe list of associates to filter on<p></p>\n<strong>Returns:</strong>NSSelectableMDOListItem[]<p></p>\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] associateList  = thing.GetAssociateList();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSSelectableMDOListItem[] GetAssociateList()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSSelectableMDOListItem[]
-  example: 
-  - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] associateList  = thing.GetAssociateList();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.GetFromDate()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.GetFromDate()
-  id: 'GetFromDate()'
-  so.intellisense: NSActivityFilter.GetFromDate
-  langs:
-  - crmscript
-  name: 'GetFromDate()'
-  nameWithType: NSActivityFilter.GetFromDate()
-  fullName: CRMScript.NetServer.NSActivityFilter.GetFromDate()
-  type: Method
-  summary: "\nThe filtering From date<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSActivityFilter thing;\nDateTime fromDate  = thing.GetFromDate();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetFromDate()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSActivityFilter thing;\nDateTime fromDate  = thing.GetFromDate();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
-  id: 'GetFutureDateList()'
-  so.intellisense: NSActivityFilter.GetFutureDateList
-  langs:
-  - crmscript
-  name: 'GetFutureDateList()'
-  nameWithType: NSActivityFilter.GetFutureDateList()
-  fullName: CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
-  type: Method
-  summary: "\nThe list of future date selections. This is a static MDO list with standard values.<p></p>\n<strong>Returns:</strong>NSMDOListItem[]<p></p>\n<pre><code>NSActivityFilter thing;\nNSMDOListItem[] futureDateList  = thing.GetFutureDateList();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSMDOListItem[] GetFutureDateList()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSMDOListItem[]
-  example: 
-  - "\n<pre><code>NSActivityFilter thing;\nNSMDOListItem[] futureDateList  = thing.GetFutureDateList();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.GetGroupList()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.GetGroupList()
-  id: 'GetGroupList()'
-  so.intellisense: NSActivityFilter.GetGroupList
-  langs:
-  - crmscript
-  name: 'GetGroupList()'
-  nameWithType: NSActivityFilter.GetGroupList()
-  fullName: CRMScript.NetServer.NSActivityFilter.GetGroupList()
-  type: Method
-  summary: "\nThe list of groups to filter on<p></p>\n<strong>Returns:</strong>NSSelectableMDOListItem[]<p></p>\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] groupList  = thing.GetGroupList();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSSelectableMDOListItem[] GetGroupList()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSSelectableMDOListItem[]
-  example: 
-  - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] groupList  = thing.GetGroupList();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivityFilter.GetToDate()
-  commentId: M:CRMScript.NetServer.NSActivityFilter.GetToDate()
-  id: 'GetToDate()'
-  so.intellisense: NSActivityFilter.GetToDate
-  langs:
-  - crmscript
-  name: 'GetToDate()'
-  nameWithType: NSActivityFilter.GetToDate()
-  fullName: CRMScript.NetServer.NSActivityFilter.GetToDate()
-  type: Method
-  summary: "\nThe filtering To date<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSActivityFilter thing;\nDateTime toDate  = thing.GetToDate();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetToDate()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSActivityFilter thing;\nDateTime toDate  = thing.GetToDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityFilter.#ctor
   commentId: M:CRMScript.NetServer.NSActivityFilter.#ctor
   id: '#ctor'
@@ -134,6 +38,106 @@ items:
   syntax: 
     content: NSActivityFilter
   example: 
+- uid: CRMScript.NetServer.NSActivityFilter.GetAssociateList()
+  commentId: M:CRMScript.NetServer.NSActivityFilter.GetAssociateList()
+  id: 'GetAssociateList()'
+  so.intellisense: NSActivityFilter.GetAssociateList
+  langs:
+  - crmscript
+  name: 'GetAssociateList()'
+  nameWithType: NSActivityFilter.GetAssociateList()
+  fullName: CRMScript.NetServer.NSActivityFilter.GetAssociateList()
+  type: Method
+  summary: "\nReturns the list of associates to filter on.\n"
+  remarks: 
+  syntax: 
+    content: NSSelectableMDOListItem[] GetAssociateList()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
+      description:
+  example: 
+  - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] associateList  = thing.GetAssociateList();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivityFilter.GetFromDate()
+  commentId: M:CRMScript.NetServer.NSActivityFilter.GetFromDate()
+  id: 'GetFromDate()'
+  so.intellisense: NSActivityFilter.GetFromDate
+  langs:
+  - crmscript
+  name: 'GetFromDate()'
+  nameWithType: NSActivityFilter.GetFromDate()
+  fullName: CRMScript.NetServer.NSActivityFilter.GetFromDate()
+  type: Method
+  summary: "\nThe filtering From date.\n"
+  remarks: 
+  syntax: 
+    content: DateTime GetFromDate()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description:
+  example: 
+  - "\n<pre><code>NSActivityFilter thing;\nDateTime fromDate  = thing.GetFromDate();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
+  commentId: M:CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
+  id: 'GetFutureDateList()'
+  so.intellisense: NSActivityFilter.GetFutureDateList
+  langs:
+  - crmscript
+  name: 'GetFutureDateList()'
+  nameWithType: NSActivityFilter.GetFutureDateList()
+  fullName: CRMScript.NetServer.NSActivityFilter.GetFutureDateList()
+  type: Method
+  summary: "\nReturns the list of future date selections.\n"
+  remarks: 
+  syntax: 
+    content: NSMDOListItem[] GetFutureDateList()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSMDOListItem[]
+      description: A static MDO list with standard values.
+  example: 
+  - "\n<pre><code>NSActivityFilter thing;\nNSMDOListItem[] futureDateList  = thing.GetFutureDateList();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivityFilter.GetGroupList()
+  commentId: M:CRMScript.NetServer.NSActivityFilter.GetGroupList()
+  id: 'GetGroupList()'
+  so.intellisense: NSActivityFilter.GetGroupList
+  langs:
+  - crmscript
+  name: 'GetGroupList()'
+  nameWithType: NSActivityFilter.GetGroupList()
+  fullName: CRMScript.NetServer.NSActivityFilter.GetGroupList()
+  type: Method
+  summary: "\nReturns the list of groups to filter on.\n"
+  remarks: 
+  syntax: 
+    content: NSSelectableMDOListItem[] GetGroupList()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
+      description:
+  example: 
+  - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] groupList  = thing.GetGroupList();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivityFilter.GetToDate()
+  commentId: M:CRMScript.NetServer.NSActivityFilter.GetToDate()
+  id: 'GetToDate()'
+  so.intellisense: NSActivityFilter.GetToDate
+  langs:
+  - crmscript
+  name: 'GetToDate()'
+  nameWithType: NSActivityFilter.GetToDate()
+  fullName: CRMScript.NetServer.NSActivityFilter.GetToDate()
+  type: Method
+  summary: "\nReturns the filtering To date.\n"
+  remarks: 
+  syntax: 
+    content: DateTime GetToDate()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description:
+  example: 
+  - "\n<pre><code>NSActivityFilter thing;\nDateTime toDate  = thing.GetToDate();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityFilter.SetAssociateList()
   commentId: M:CRMScript.NetServer.NSActivityFilter.SetAssociateList()
   id: 'SetAssociateList()'
@@ -144,11 +148,16 @@ items:
   nameWithType: NSActivityFilter.SetAssociateList()
   fullName: CRMScript.NetServer.NSActivityFilter.SetAssociateList()
   type: Method
-  summary: "\nThe list of associates to filter on\n"
+  summary: "\nSets the list of associates to filter on.\n"
   remarks: 
   syntax: 
-    content: SetAssociateList(NSSelectableMDOListItem[] associateList)
+    content: Void SetAssociateList(NSSelectableMDOListItem[] associateList)
     parameters:
+    - id: associateList
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
+      description: list of associates
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] associateList;\nthing.SetAssociateList(associateList);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityFilter.SetFromDate()
@@ -161,11 +170,16 @@ items:
   nameWithType: NSActivityFilter.SetFromDate()
   fullName: CRMScript.NetServer.NSActivityFilter.SetFromDate()
   type: Method
-  summary: "\nThe filtering From date\n"
+  summary: "\nSets the filtering From date.\n"
   remarks: 
   syntax: 
-    content: SetFromDate(DateTime fromDate)
+    content: Void SetFromDate(DateTime fromDate)
     parameters:
+    - id: fromDate
+      type: CRMScript.Global.DateTime
+      description: date to filter from
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nDateTime fromDate;\nthing.SetFromDate(fromDate);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityFilter.SetFutureDateList(NSMDOListItem[])
@@ -178,14 +192,16 @@ items:
   nameWithType: NSActivityFilter.SetFutureDateList(NSMDOListItem[])
   fullName: CRMScript.NetServer.NSActivityFilter.SetFutureDateList(NSMDOListItem[])
   type: Method
-  summary: "\nThe list of future date selections. This is a static MDO list with standard values.\n"
+  summary: "\nSets the list of future date selections.\n"
   remarks: 
   syntax: 
-    content: SetFutureDateList(NSMDOListItem[] futureDateList)
+    content: Void SetFutureDateList(NSMDOListItem[] futureDateList)
     parameters:
     - id: futureDateList
       type: CRMScript.NetServer.NSMDOListItem[]
-      description: 
+      description: A static MDO list with standard values.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nNSMDOListItem[] futureDateList;\nthing.SetFutureDateList(futureDateList);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityFilter.SetGroupList()
@@ -198,11 +214,16 @@ items:
   nameWithType: NSActivityFilter.SetGroupList()
   fullName: CRMScript.NetServer.NSActivityFilter.SetGroupList()
   type: Method
-  summary: "\nThe list of groups to filter on\n"
+  summary: "\nSets the list of groups to filter on.\n"
   remarks: 
   syntax: 
-    content: SetGroupList(NSSelectableMDOListItem[] groupList)
+    content: Void SetGroupList(NSSelectableMDOListItem[] groupList)
     parameters:
+    - id: groupList
+      type: CRMScript.NetServer.NSSelectableMDOListItem[]
+      description: list of groups to filter on
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nNSSelectableMDOListItem[] groupList;\nthing.SetGroupList(groupList);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivityFilter.SetToDate()
@@ -215,11 +236,16 @@ items:
   nameWithType: NSActivityFilter.SetToDate()
   fullName: CRMScript.NetServer.NSActivityFilter.SetToDate()
   type: Method
-  summary: "\nThe filtering To date\n"
+  summary: "\nSets the filtering To date.\n"
   remarks: 
   syntax: 
-    content: SetToDate(DateTime toDate)
+    content: Void SetToDate(DateTime toDate)
     parameters:
+    - id: toDate
+      type: CRMScript.Global.DateTime
+      description: date to filter to
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivityFilter thing;\nDateTime toDate;\nthing.SetToDate(toDate);</code></pre>\n"
 references:
@@ -275,3 +301,9 @@ references:
   name: NSMDOListItem
   nameWithType: NSMDOListItem
   fullName: CRMScript.NetServer.NSMDOListItem
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
