--- a/docs/api-reference/CRMScript.NetServer.NSActivitySummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivitySummary.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSActivitySummary
   commentId: T:CRMScript.NetServer.NSActivitySummary
   id: NSActivitySummary
-  so.intellisense: Void.NSActivitySummary
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSActivitySummary.#ctor
   - CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
   - CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
   - CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
-  - CRMScript.NetServer.NSActivitySummary.#ctor
   - CRMScript.NetServer.NSActivitySummary.SetNumBusyActivities(Integer)
   - CRMScript.NetServer.NSActivitySummary.SetNumFreeActivities(Integer)
   - CRMScript.NetServer.NSActivitySummary.SetPercentageBusy(Integer)
@@ -18,65 +17,8 @@ items:
   nameWithType: NSActivitySummary
   fullName: CRMScript.NetServer.NSActivitySummary
   type: Class
-  summary: 
+  summary: "\nActivity information summary - number of free and busy activities.\n"
   example: 
-- uid: CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
-  commentId: M:CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
-  id: 'GetNumBusyActivities()'
-  so.intellisense: NSActivitySummary.GetNumBusyActivities
-  langs:
-  - crmscript
-  name: 'GetNumBusyActivities()'
-  nameWithType: NSActivitySummary.GetNumBusyActivities()
-  fullName: CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
-  type: Method
-  summary: "\nNumber of activites and tasks in the diary that are of type 'busy'. Sales and documents are not activites in this case, only diary appointments and tasks.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger numBusyActivities  = thing.GetNumBusyActivities();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetNumBusyActivities()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSActivitySummary thing;\nInteger numBusyActivities  = thing.GetNumBusyActivities();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
-  commentId: M:CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
-  id: 'GetNumFreeActivities()'
-  so.intellisense: NSActivitySummary.GetNumFreeActivities
-  langs:
-  - crmscript
-  name: 'GetNumFreeActivities()'
-  nameWithType: NSActivitySummary.GetNumFreeActivities()
-  fullName: CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
-  type: Method
-  summary: "\nNumber of activites of the type 'free'. Sales and documents are not activites in this case, only diary appointments and tasks.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger numFreeActivities  = thing.GetNumFreeActivities();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetNumFreeActivities()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSActivitySummary thing;\nInteger numFreeActivities  = thing.GetNumFreeActivities();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
-  commentId: M:CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
-  id: 'GetPercentageBusy()'
-  so.intellisense: NSActivitySummary.GetPercentageBusy
-  langs:
-  - crmscript
-  name: 'GetPercentageBusy()'
-  nameWithType: NSActivitySummary.GetPercentageBusy()
-  fullName: CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
-  type: Method
-  summary: "\nHow much of the active work-day which is booked in appointments.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger percentageBusy  = thing.GetPercentageBusy();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPercentageBusy()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSActivitySummary thing;\nInteger percentageBusy  = thing.GetPercentageBusy();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummary.#ctor
   commentId: M:CRMScript.NetServer.NSActivitySummary.#ctor
   id: '#ctor'
@@ -92,6 +34,66 @@ items:
   syntax: 
     content: NSActivitySummary
   example: 
+- uid: CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
+  commentId: M:CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
+  id: 'GetNumBusyActivities()'
+  so.intellisense: NSActivitySummary.GetNumBusyActivities
+  langs:
+  - crmscript
+  name: 'GetNumBusyActivities()'
+  nameWithType: NSActivitySummary.GetNumBusyActivities()
+  fullName: CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
+  type: Method
+  summary: "\nReturns the number of activities and tasks in the diary that are of type 'busy'.\n"
+  remarks: "\nSales and documents are not activities in this case, only diary appointments and tasks.\n"
+  syntax: 
+    content: Integer GetNumBusyActivities()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: the number of activities and tasks in the diary of type busy
+  example: 
+  - "\n<pre><code>NSActivitySummary thing;\nInteger numBusyActivities  = thing.GetNumBusyActivities();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
+  commentId: M:CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
+  id: 'GetNumFreeActivities()'
+  so.intellisense: NSActivitySummary.GetNumFreeActivities
+  langs:
+  - crmscript
+  name: 'GetNumFreeActivities()'
+  nameWithType: NSActivitySummary.GetNumFreeActivities()
+  fullName: CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
+  type: Method
+  summary: "\nReturns the number of activities of the type 'free'.\n"
+  remarks: "\nSales and documents are not activities in this case, only diary appointments and tasks.\n"
+  syntax: 
+    content: Integer GetNumFreeActivities()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: the number of activities of type free
+  example: 
+  - "\n<pre><code>NSActivitySummary thing;\nInteger numFreeActivities  = thing.GetNumFreeActivities();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
+  commentId: M:CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
+  id: 'GetPercentageBusy()'
+  so.intellisense: NSActivitySummary.GetPercentageBusy
+  langs:
+  - crmscript
+  name: 'GetPercentageBusy()'
+  nameWithType: NSActivitySummary.GetPercentageBusy()
+  fullName: CRMScript.NetServer.NSActivitySummary.GetPercentageBusy()
+  type: Method
+  summary: "\nChecks how much of the active work-day that is booked in appointments.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetPercentageBusy()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: 
+  example: 
+  - "\n<pre><code>NSActivitySummary thing;\nInteger percentageBusy  = thing.GetPercentageBusy();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummary.SetNumBusyActivities(Integer)
   commentId: M:CRMScript.NetServer.NSActivitySummary.SetNumBusyActivities(Integer)
   id: 'SetNumBusyActivities(Integer)'
@@ -102,14 +104,16 @@ items:
   nameWithType: NSActivitySummary.SetNumBusyActivities(Integer)
   fullName: CRMScript.NetServer.NSActivitySummary.SetNumBusyActivities(Integer)
   type: Method
-  summary: "\nNumber of activites and tasks in the diary that are of type 'busy'. Sales and documents are not activites in this case, only diary appointments and tasks.\n"
-  remarks: 
+  summary: "\nSets the number of activities and tasks in the diary that are of type 'busy'.\n"
+  remarks: "\n Sales and documents are not activities in this case, only diary appointments and tasks.\n"
   syntax: 
-    content: SetNumBusyActivities(Integer numBusyActivities)
+    content: Void SetNumBusyActivities(Integer numBusyActivities)
     parameters:
     - id: numBusyActivities
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivitySummary thing;\nInteger numBusyActivities;\nthing.SetNumBusyActivities(numBusyActivities);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummary.SetNumFreeActivities(Integer)
@@ -122,14 +126,16 @@ items:
   nameWithType: NSActivitySummary.SetNumFreeActivities(Integer)
   fullName: CRMScript.NetServer.NSActivitySummary.SetNumFreeActivities(Integer)
   type: Method
-  summary: "\nNumber of activites of the type 'free'. Sales and documents are not activites in this case, only diary appointments and tasks.\n"
-  remarks: 
+  summary: "\nSets the number of activities of the type 'free'.\n"
+  remarks: "\nSales and documents are not activities in this case, only diary appointments and tasks.\n"
   syntax: 
-    content: SetNumFreeActivities(Integer numFreeActivities)
+    content: Void SetNumFreeActivities(Integer numFreeActivities)
     parameters:
     - id: numFreeActivities
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivitySummary thing;\nInteger numFreeActivities;\nthing.SetNumFreeActivities(numFreeActivities);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummary.SetPercentageBusy(Integer)
@@ -142,14 +148,16 @@ items:
   nameWithType: NSActivitySummary.SetPercentageBusy(Integer)
   fullName: CRMScript.NetServer.NSActivitySummary.SetPercentageBusy(Integer)
   type: Method
-  summary: "\nHow much of the active work-day which is booked in appointments.\n"
+  summary: "\nSets how much of the active work-day which is booked in appointments.\n"
   remarks: 
   syntax: 
-    content: SetPercentageBusy(Integer percentageBusy)
+    content: Void SetPercentageBusy(Integer percentageBusy)
     parameters:
     - id: percentageBusy
       type: CRMScript.Global.Integer
-      description: 
+      description:
+    return:
+      type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSActivitySummary thing;\nInteger percentageBusy;\nthing.SetPercentageBusy(percentageBusy);</code></pre>\n"
 references:
@@ -165,3 +173,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
