--- a/docs/api-reference/old/new/CRMScript.NetServer.NSActivitySummary.yml
+++ b/docs/api-reference/old/new/CRMScript.NetServer.NSActivitySummary.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSActivitySummary.GetNumBusyActivities()
   fullName: CRMScript.NetServer.NSActivitySummary.GetNumBusyActivities()
   type: Method
-  summary: "\nNumber of activites and tasks in the diary that are of type 'busy'. Sales and documents are not activites in this case, only diary appointments and tasks.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger numBusyActivities  = thing.GetNumBusyActivities();</code></pre>\n"
+  summary: "\nNumber of activities and tasks in the diary that are of type 'busy'. Sales and documents are not activities in this case, only diary appointments and tasks.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger numBusyActivities  = thing.GetNumBusyActivities();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetNumBusyActivities()
@@ -49,7 +49,7 @@ items:
   nameWithType: NSActivitySummary.GetNumFreeActivities()
   fullName: CRMScript.NetServer.NSActivitySummary.GetNumFreeActivities()
   type: Method
-  summary: "\nNumber of activites of the type 'free'. Sales and documents are not activites in this case, only diary appointments and tasks.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger numFreeActivities  = thing.GetNumFreeActivities();</code></pre>\n"
+  summary: "\nNumber of activities of the type 'free'. Sales and documents are not activities in this case, only diary appointments and tasks.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummary thing;\nInteger numFreeActivities  = thing.GetNumFreeActivities();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetNumFreeActivities()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSActivitySummary.SetNumBusyActivities(Integer)
   fullName: CRMScript.NetServer.NSActivitySummary.SetNumBusyActivities(Integer)
   type: Method
-  summary: "\nNumber of activites and tasks in the diary that are of type 'busy'. Sales and documents are not activites in this case, only diary appointments and tasks.\n"
+  summary: "\nNumber of activities and tasks in the diary that are of type 'busy'. Sales and documents are not activities in this case, only diary appointments and tasks.\n"
   remarks: 
   syntax: 
     content: SetNumBusyActivities(Integer numBusyActivities)
@@ -122,7 +122,7 @@ items:
   nameWithType: NSActivitySummary.SetNumFreeActivities(Integer)
   fullName: CRMScript.NetServer.NSActivitySummary.SetNumFreeActivities(Integer)
   type: Method
-  summary: "\nNumber of activites of the type 'free'. Sales and documents are not activites in this case, only diary appointments and tasks.\n"
+  summary: "\nNumber of activities of the type 'free'. Sales and documents are not activities in this case, only diary appointments and tasks.\n"
   remarks: 
   syntax: 
     content: SetNumFreeActivities(Integer numFreeActivities)
