--- a/docs/api-reference/CRMScript.NetServer.NSActivitySummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivitySummaryItem.yml
@@ -3,17 +3,16 @@ items:
 - uid: CRMScript.NetServer.NSActivitySummaryItem
   commentId: T:CRMScript.NetServer.NSActivitySummaryItem
   id: NSActivitySummaryItem
-  so.intellisense: Void.NSActivitySummaryItem
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSActivitySummaryItem.#ctor
   - CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
   - CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
   - CRMScript.NetServer.NSActivitySummaryItem.GetDate()
   - CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
   - CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
   - CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
-  - CRMScript.NetServer.NSActivitySummaryItem.#ctor
   - CRMScript.NetServer.NSActivitySummaryItem.SetAppointmentId(Integer)
   - CRMScript.NetServer.NSActivitySummaryItem.SetCompleted(Integer)
   - CRMScript.NetServer.NSActivitySummaryItem.SetDate()
@@ -24,122 +23,8 @@ items:
   nameWithType: NSActivitySummaryItem
   fullName: CRMScript.NetServer.NSActivitySummaryItem
   type: Class
-  summary: 
+  summary: "\nSummary details about appointments and documents.\n"
   example: 
-- uid: CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
-  id: 'GetAppointmentId()'
-  so.intellisense: NSActivitySummaryItem.GetAppointmentId
-  langs:
-  - crmscript
-  name: 'GetAppointmentId()'
-  nameWithType: NSActivitySummaryItem.GetAppointmentId()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
-  type: Method
-  summary: "\nPrimary key<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummaryItem thing;\nInteger appointmentId  = thing.GetAppointmentId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAppointmentId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSActivitySummaryItem thing;\nInteger appointmentId  = thing.GetAppointmentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
-  id: 'GetCompleted()'
-  so.intellisense: NSActivitySummaryItem.GetCompleted
-  langs:
-  - crmscript
-  name: 'GetCompleted()'
-  nameWithType: NSActivitySummaryItem.GetCompleted()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
-  type: Method
-  summary: "\nThe Completed state. NotStarted(1) or Completed(3)<p></p>\n<strong>Returns:</strong>Integer\n"
-  remarks: 
-  syntax: 
-    content: Integer GetCompleted()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSActivitySummaryItem thing;\nInteger completed  = thing.GetCompleted();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.GetDate()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetDate()
-  id: 'GetDate()'
-  so.intellisense: NSActivitySummaryItem.GetDate
-  langs:
-  - crmscript
-  name: 'GetDate()'
-  nameWithType: NSActivitySummaryItem.GetDate()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetDate()
-  type: Method
-  summary: "\nStart/Document date<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSActivitySummaryItem thing;\nDateTime date  = thing.GetDate();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetDate()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSActivitySummaryItem thing;\nDateTime date  = thing.GetDate();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSActivitySummaryItem.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSActivitySummaryItem.GetDescription()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
-  type: Method
-  summary: "\nThe appointment's textbox; document title<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSActivitySummaryItem thing;\nString description  = thing.GetDescription();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDescription()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSActivitySummaryItem thing;\nString description  = thing.GetDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
-  id: 'GetDocumentId()'
-  so.intellisense: NSActivitySummaryItem.GetDocumentId
-  langs:
-  - crmscript
-  name: 'GetDocumentId()'
-  nameWithType: NSActivitySummaryItem.GetDocumentId()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
-  type: Method
-  summary: "\nDocument id* 0 if not a document<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSActivitySummaryItem thing;\nInteger documentId  = thing.GetDocumentId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDocumentId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSActivitySummaryItem thing;\nInteger documentId  = thing.GetDocumentId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
-  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
-  id: 'GetRegistered()'
-  so.intellisense: NSActivitySummaryItem.GetRegistered
-  langs:
-  - crmscript
-  name: 'GetRegistered()'
-  nameWithType: NSActivitySummaryItem.GetRegistered()
-  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
-  type: Method
-  summary: "\nRegistered date<p></p>\n<strong>Returns:</strong>DateTime<p></p>\n<pre><code>NSActivitySummaryItem thing;\nDateTime registered  = thing.GetRegistered();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: DateTime GetRegistered()
-    parameters:
-    return:
-      type: CRMScript.Global.DateTime
-  example: 
-  - "\n<pre><code>NSActivitySummaryItem thing;\nDateTime registered  = thing.GetRegistered();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummaryItem.#ctor
   commentId: M:CRMScript.NetServer.NSActivitySummaryItem.#ctor
   id: '#ctor'
@@ -155,6 +40,126 @@ items:
   syntax: 
     content: NSActivitySummaryItem
   example: 
+- uid: CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
+  id: 'GetAppointmentId()'
+  so.intellisense: NSActivitySummaryItem.GetAppointmentId
+  langs:
+  - crmscript
+  name: 'GetAppointmentId()'
+  nameWithType: NSActivitySummaryItem.GetAppointmentId()
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetAppointmentId()
+  type: Method
+  summary: "\nReturns the appointment ID (primary key).\n"
+  remarks: 
+  syntax: 
+    content: Integer GetAppointmentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Appointment ID
+  example: 
+  - "\n<pre><code>NSActivitySummaryItem thing;\nInteger appointmentId  = thing.GetAppointmentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
+  id: 'GetCompleted()'
+  so.intellisense: NSActivitySummaryItem.GetCompleted
+  langs:
+  - crmscript
+  name: 'GetCompleted()'
+  nameWithType: NSActivitySummaryItem.GetCompleted()
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetCompleted()
+  type: Method
+  summary: "\nThe Completed state. NotStarted(1) or Completed(3)\n"
+  remarks: 
+  syntax: 
+    content: Integer GetCompleted()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+  - "\n<pre><code>NSActivitySummaryItem thing;\nInteger completed  = thing.GetCompleted();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummaryItem.GetDate()
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetDate()
+  id: 'GetDate()'
+  so.intellisense: NSActivitySummaryItem.GetDate
+  langs:
+  - crmscript
+  name: 'GetDate()'
+  nameWithType: NSActivitySummaryItem.GetDate()
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetDate()
+  type: Method
+  summary: "\nStart/Document date.\n"
+  remarks: 
+  syntax: 
+    content: DateTime GetDate()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description:
+  example: 
+  - "\n<pre><code>NSActivitySummaryItem thing;\nDateTime date  = thing.GetDate();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSActivitySummaryItem.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSActivitySummaryItem.GetDescription()
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetDescription()
+  type: Method
+  summary: "\nThe appointment's textbox; document title.\n"
+  remarks: 
+  syntax: 
+    content: String GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description:
+  example: 
+  - "\n<pre><code>NSActivitySummaryItem thing;\nString description  = thing.GetDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
+  id: 'GetDocumentId()'
+  so.intellisense: NSActivitySummaryItem.GetDocumentId
+  langs:
+  - crmscript
+  name: 'GetDocumentId()'
+  nameWithType: NSActivitySummaryItem.GetDocumentId()
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetDocumentId()
+  type: Method
+  summary: "\nReturns the document ID.\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDocumentId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Document ID - 0 if not a document
+  example: 
+  - "\n<pre><code>NSActivitySummaryItem thing;\nInteger documentId  = thing.GetDocumentId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
+  commentId: M:CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
+  id: 'GetRegistered()'
+  so.intellisense: NSActivitySummaryItem.GetRegistered
+  langs:
+  - crmscript
+  name: 'GetRegistered()'
+  nameWithType: NSActivitySummaryItem.GetRegistered()
+  fullName: CRMScript.NetServer.NSActivitySummaryItem.GetRegistered()
+  type: Method
+  summary: "\nReturns the registered date.\n"
+  remarks: 
+  syntax: 
+    content: DateTime GetRegistered()
+    parameters: []
+    return:
+      type: CRMScript.Global.DateTime
+      description:
+  example: 
+  - "\n<pre><code>NSActivitySummaryItem thing;\nDateTime registered  = thing.GetRegistered();</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummaryItem.SetAppointmentId(Integer)
   commentId: M:CRMScript.NetServer.NSActivitySummaryItem.SetAppointmentId(Integer)
   id: 'SetAppointmentId(Integer)'
@@ -168,11 +173,13 @@ items:
   summary: "\nPrimary key\n"
   remarks: 
   syntax: 
-    content: SetAppointmentId(Integer appointmentId)
+    content: Void SetAppointmentId(Integer appointmentId)
     parameters:
     - id: appointmentId
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nInteger appointmentId;\nthing.SetAppointmentId(appointmentId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummaryItem.SetCompleted(Integer)
@@ -185,14 +192,16 @@ items:
   nameWithType: NSActivitySummaryItem.SetCompleted(Integer)
   fullName: CRMScript.NetServer.NSActivitySummaryItem.SetCompleted(Integer)
   type: Method
-  summary: "\nThe Completed state. NotStarted(1) or Completed(3)\n"
+  summary: "\nSets the Completed state. NotStarted(1) or Completed(3)\n"
   remarks: 
   syntax: 
-    content: SetCompleted(Integer completed)
+    content: Void SetCompleted(Integer completed)
     parameters:
     - id: completed
       type: CRMScript.Global.Integer
-      description: 
+      description:
+    return:
+      type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nInteger completed;\nthing.SetCompleted(completed);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummaryItem.SetDate()
@@ -222,14 +231,16 @@ items:
   nameWithType: NSActivitySummaryItem.SetDescription(String)
   fullName: CRMScript.NetServer.NSActivitySummaryItem.SetDescription(String)
   type: Method
-  summary: "\nThe appointment's textbox; document title\n"
+  summary: "\nSets the appointment's textbox; document title\n"
   remarks: 
   syntax: 
-    content: SetDescription(String description)
+    content: Void SetDescription(String description)
     parameters:
     - id: description
       type: CRMScript.Global.String
-      description: 
+      description:
+    return:
+      type: CRMScript.Global.Void 
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nString description;\nthing.SetDescription(description);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummaryItem.SetDocumentId(Integer)
@@ -242,14 +253,16 @@ items:
   nameWithType: NSActivitySummaryItem.SetDocumentId(Integer)
   fullName: CRMScript.NetServer.NSActivitySummaryItem.SetDocumentId(Integer)
   type: Method
-  summary: "\nDocument id* 0 if not a document\n"
+  summary: "\nSets the document ID\n"
   remarks: 
   syntax: 
-    content: SetDocumentId(Integer documentId)
+    content: Void SetDocumentId(Integer documentId)
     parameters:
     - id: documentId
       type: CRMScript.Global.Integer
-      description: 
+      description: Document ID; 0 if not a document
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nInteger documentId;\nthing.SetDocumentId(documentId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSActivitySummaryItem.SetRegistered()
@@ -262,11 +275,16 @@ items:
   nameWithType: NSActivitySummaryItem.SetRegistered()
   fullName: CRMScript.NetServer.NSActivitySummaryItem.SetRegistered()
   type: Method
-  summary: "\nRegistered date\n"
+  summary: "\nSets the registered date.\n"
   remarks: 
   syntax: 
-    content: SetRegistered(DateTime registered)
+    content: Void SetRegistered(DateTime registered)
     parameters:
+    - id: registered
+      type: CRMScript.Global.DateTime
+      description:
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSActivitySummaryItem thing;\nDateTime registered;\nthing.SetRegistered(registered);</code></pre>\n"
 references:
@@ -294,3 +312,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
